# pdf_scout

./: .gitignore  LICENCE  README.md  mypy.ini  pyproject.toml
.github/workflows/: CD.yml  CI.yml
pdf_scout/: app.py  bookmarks.py  custom_types.py  extract.py  logger.py  paragraphs.py  scoring.py  types.py  utils.py
pdf_scout/tests/: conftest.py  input_files.py  test_bookmarks.py  test_extract.py  test_paragraphs.py  test_scoring.py
pdf_scout/tests/snapshots/: snap_test_bookmarks.py  snap_test_extract.py  snap_test_paragraphs.py  snap_test_scoring.py
src/: app.py  cache.py  extract.py  scoring.py
src/tests/: test_extract.py
src/tests/snapshots/: snap_test_extract.py
