[tool.poetry]
name = "pdf_scout"
version = "0.0.5"
description = "automatically create bookmarks in a PDF file"
authors = ["Huey <hello@huey.xyz>"]
license = "GPL-v3"
readme = "README.md"
homepage = "https://github.com/hueyy/pdf_scout"
repository = "https://github.com/hueyy/pdf_scout"
documentation = "https://github.com/hueyy/pdf_scout"
keywords = ["pdf", "bookmark", "outline"]
exclude = ["pdf_scout/tests"]

[tool.poetry.dependencies]
python = "^3.10"
pdfplumber = "^0.7.6"
typer = {extras = ["all"], version = "^0.6.1"}
joblib = "^1.2.0"
rich = "^12.5.1"
unidecode = "^1.3.6"
pypdf = "^3.1.0"

[tool.poetry.dev-dependencies]
snapshottest = "^0.6.0"
pytest = "^7.1.3"
mypy = "^0.982"

[tool.poetry.scripts]
pdf_scout = "pdf_scout.app:start"

[tool.poetry.group.dev.dependencies]
pytest-xdist = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
ignore_missing_imports = true