[tool.poetry]
name = "pdf_scout"
version = "0.0.7"
description = "automatically create bookmarks in a PDF file"
authors = ["Huey <hello@huey.xyz>"]
license = "EUPL-1.2"
readme = "README.md"
homepage = "https://github.com/hueyy/pdf_scout"
repository = "https://github.com/hueyy/pdf_scout"
documentation = "https://github.com/hueyy/pdf_scout"
keywords = ["pdf", "bookmark", "outline"]
exclude = ["pdf_scout/tests"]

[tool.poetry.dependencies]
python = "^3.12.0"
pdfplumber = "^0.10.3"
typer = {extras = ["all"], version = "^0.9.0"}
joblib = "^1.2.0"
rich = "^13.7.0"
unidecode = "^1.3.6"
pypdf = "^4.0.0"

[tool.poetry.dev-dependencies]
snapshottest = "^0.6.0"
pytest = "^7.1.3"
mypy = "^0.982"
debugpy = "^1.8.0"

[tool.poetry.scripts]
pdf_scout = "pdf_scout.app:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
ignore_missing_imports = true